test/scc/lex/errors/006.a
006.t:1:1: error: stray '@' in program